Overflow fix

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -204,7 +204,9 @@ body
     float           left
   #exporter
     float           right
-    width           37
+    width           37px
+    height          32px
+    overflow        hidden
   span, a.control
     width           30px
     height          30px
